--- a/index.html
+++ b/index.html
@@ -5,3 +5,9 @@
 <a href=" https://HuiMue.github.io/实验一/demos/chap1-demo-3.html">Demo-1-3</a>
 <a href=" https://HuiMue.github.io/实验一/demos/chap1-demo-4.html">Demo-1-4</a>
 <a href=" https://HuiMue.github.io/实验一/demos/chap1-demo-5.html">Demo-1-5</a>
+<a href=" https://HuiMue.github.io/实验二/demos/chap2-demo-1.html">Demo-2-1</a>
+<a href=" https://HuiMue.github.io/实验二/demos/chap2-demo-2.html">Demo-2-2</a>
+<a href=" https://HuiMue.github.io/实验二/demos/chap2-demo-3.html">Demo-2-3</a>
+<a href=" https://HuiMue.github.io/实验二/demos/chap2-demo-4.html">Demo-2-4</a>
+<a href=" https://HuiMue.github.io/实验二/demos/chap2-demo-5.html">Demo-2-5</a>
+
