--- a/index.html
+++ b/index.html
@@ -14,3 +14,6 @@
 
 <a href=" https://HuiMue.github.io/实验三/demos/chap3-demo-1.html">Demo-3-1</a>
 <a href=" https://HuiMue.github.io/实验三/demos/chap3-demo-2.html">Demo-3-2</a>
+
+<a href=" https://HuiMue.github.io/实验四/demos/chap4-demo-1.html">Demo-4-1</a>
+<a href=" https://HuiMue.github.io/实验四/demos/chap4-demo-2.html">Demo-4-2</a>
