--- a/index.html
+++ b/index.html
@@ -4,16 +4,21 @@
 <a href=" https://HuiMue.github.io/实验一/demos/chap1-demo-2.html">Demo-1-2</a>
 <a href=" https://HuiMue.github.io/实验一/demos/chap1-demo-3.html">Demo-1-3</a>
 <a href=" https://HuiMue.github.io/实验一/demos/chap1-demo-4.html">Demo-1-4</a>
-<a href=" https://HuiMue.github.io/实验一/demos/chap1-demo-5.html">Demo-1-5</a>
+<a href=" https://HuiMue.github.io/实验一/demos/chap1-demo-5.html">Demo-1-5</a><br/>
 
 <a href=" https://HuiMue.github.io/实验二/demos/chap2-demo-1.html">Demo-2-1</a>
 <a href=" https://HuiMue.github.io/实验二/demos/chap2-demo-2.html">Demo-2-2</a>
 <a href=" https://HuiMue.github.io/实验二/demos/chap2-demo-3.html">Demo-2-3</a>
 <a href=" https://HuiMue.github.io/实验二/demos/chap2-demo-4.html">Demo-2-4</a>
-<a href=" https://HuiMue.github.io/实验二/demos/chap2-demo-5.html">Demo-2-5</a>
+<a href=" https://HuiMue.github.io/实验二/demos/chap2-demo-5.html">Demo-2-5</a><br/>
 
 <a href=" https://HuiMue.github.io/实验三/demos/chap3-demo-1.html">Demo-3-1</a>
-<a href=" https://HuiMue.github.io/实验三/demos/chap3-demo-2.html">Demo-3-2</a>
+<a href=" https://HuiMue.github.io/实验三/demos/chap3-demo-2.html">Demo-3-2</a><br/>
 
 <a href=" https://HuiMue.github.io/实验四/demos/chap4-demo-1.html">Demo-4-1</a>
-<a href=" https://HuiMue.github.io/实验四/demos/chap4-demo-2.html">Demo-4-2</a>
+<a href=" https://HuiMue.github.io/实验四/demos/chap4-demo-2.html">Demo-4-2</a><br/>
+
+<a href=" https://HuiMue.github.io/实验五/demos/chap5-demo-1.html">Demo-5-1</a><br/>
+
+<a href=" https://HuiMue.github.io/实验六/demos/chap6-demo-1.html">Demo-6-1</a>
+<a href=" https://HuiMue.github.io/实验六/demos/chap6-demo-2.html">Demo-6-2</a><br/>
