--- a/index.html
+++ b/index.html
@@ -22,3 +22,6 @@
 
 <a href=" https://HuiMue.github.io/实验六/demos/chap6-demo-1.html">Demo-6-1</a>&nbsp;&nbsp;
 <a href=" https://HuiMue.github.io/实验六/demos/chap6-demo-2.html">Demo-6-2</a><br/>
+
+<a href=" https://HuiMue.github.io/实验七/demos/chap7.html">Demo-7-1</a>&nbsp;&nbsp;
+<a href=" https://HuiMue.github.io/实验七/demos/ch07-2.html">Demo-7-2</a><br/>
