--- a/index.html
+++ b/index.html
@@ -26,4 +26,4 @@
 <a href=" https://HuiMue.github.io/实验七/demos/chap7.html">Demo-7-1</a>&nbsp;&nbsp;
 <a href=" https://HuiMue.github.io/实验七/demos/ch07-2.html">Demo-7-2</a><br/>
 
-<a href=" https://HuiMue.github.io/小组作业/小组.html">小组作业</a><br/>
+<a href=" https://HuiMue.github.io/小组作业/code/小组.html">小组作业</a><br/>
