--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 
 <p>我是HuiMue。 </p>
+<a href=" https://HuiMue.github.io/小组作业/code/小组.html">计算机图形学</a><br/>
 <a href=" https://HuiMue.github.io/实验一/demos/chap1-demo-1.html">Demo-1-1</a>&nbsp;&nbsp;
 <a href=" https://HuiMue.github.io/实验一/demos/chap1-demo-2.html">Demo-1-2</a>&nbsp;&nbsp;
 <a href=" https://HuiMue.github.io/实验一/demos/chap1-demo-3.html">Demo-1-3</a>&nbsp;&nbsp;
@@ -26,4 +27,9 @@
 <a href=" https://HuiMue.github.io/实验七/demos/chap7.html">Demo-7-1</a>&nbsp;&nbsp;
 <a href=" https://HuiMue.github.io/实验七/demos/ch07-2.html">Demo-7-2</a><br/>
 
-<a href=" https://HuiMue.github.io/小组作业/code/小组.html">小组作业</a><br/>
+<a href=" https://HuiMue.github.io/计时器.html">计时器网页</a><br/>
+<ul type="circle">
+  <li><a href=" https://HuiMue.github.io/软件工程.zip">软件工程</a></li>
+  <li><a href=" https://HuiMue.github.io/机组.zip">机组</a></li>
+</ul>
+  
