--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <ul type="circle">
   <li><a href=" https://HuiMue.github.io/软件工程.zip">软件工程</a></li>
   <li><a href=" https://HuiMue.github.io/机组.zip">机组</a></li>
-  <li><a href=" https://HuiMue.github.io/微信小程序设计UI.zip">微信小程序设计UI</a></li>
+  <li><a href=" https://HuiMue.github.io/微信小程序UI.zip">微信小程序UI</a></li>
   <li><a href=" https://HuiMue.github.io/数据库SQL.zip">数据库SQL</a></li>
 </ul>
   
